# vulkan-sands

./: .gitignore  CMakeLists.txt  flake.nix
.cache/clangd/index/: Application.cpp.7C5806D2D7FA3968.idx  Engine.cpp.76FBA3A1569D1D16.idx  Engine.hpp.C7D42A07261F0A2E.idx  context.c.5DCC762E43648BBB.idx  debugUtils.hpp.0477A2E0230B2C73.idx  egl_context.c.91CF4D7AE68643A3.idx  glfw3.h.CCB7C4E2306FAB4E.idx  handles.hpp.04E7055F20CEA807.idx  init.c.1F9D97AE325E3A4A.idx  input.c.1F38729F5ECE3610.idx  internal.h.E8894BB0C5E6527E.idx  mappings.h.8BE0B9D8400F68A9.idx  monitor.c.0AD4D38633A54CD5.idx  null_init.c.9E83DAD416782E01.idx  null_joystick.c.7AEFF34A4E26AB35.idx  null_joystick.h.39567F0823C6AC74.idx  null_monitor.c.FF197B1376FDEEAF.idx  null_platform.h.4CB9E09DD2F59E30.idx  null_window.c.3BD1DCC802B97656.idx  osmesa_context.c.8411C553D5731792.idx  platform.c.33B5087AB158D249.idx  platform.h.151F4421FBBEB830.idx  utils.hpp.6FFDCA7AD59FCA5D.idx  vulkan.c.76C40A0BD1A8E0E1.idx  wgl_context.c.91B812D45E2FF2E0.idx  win32_init.c.83C51EF5F3DC09F4.idx  win32_joystick.c.50814C8EFE684A8B.idx  win32_joystick.h.50F7FD76BF4C9800.idx  win32_module.c.044CA478CCE3EB56.idx  win32_monitor.c.2A05242BE4CA050D.idx  win32_platform.h.2C5FF595F0FBFE3B.idx  win32_thread.c.A2960AF99CFD3F88.idx  win32_thread.h.7FF0DA6CDF0BBD83.idx  win32_time.c.79EA96A4CE010EBC.idx  win32_time.h.06A23A79320632E1.idx  win32_window.c.7A4895391AE54C7A.idx  window.c.F9DF862E326FDF52.idx  wrappers.hpp.4619F96353020351.idx
application/: Application.cpp  CMakeLists.txt
engine/: CMakeLists.txt  engine.cpp
engine/cell/: cell.hpp  config.hpp
engine/config/: config.hpp
engine/elements/: config.hpp  element.hpp
engine/includes/: engine.hpp  utils.hpp
engine/renderer/: CMakeLists.txt  renderer.cpp
engine/renderer/includes/: renderer.hpp
engine/renderer/utils/: debugUtils.hpp  utils.hpp  wrappers.hpp
engine/sim/: CMakeLists.txt  element.cpp  sim.cpp  sim.hpp
engine/sim/includes/: element.hpp  elementType.hpp  sim.hpp
renderer/: CMakeLists.txt  Engine.cpp
renderer/includes/: Engine.hpp
res/shaders/: compile.bat  testv.spv  testv.vert
